changes to backport to java 11